--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,13 @@
 
 {% block title %} WELCOME {% endblock %}
 
+{% block style %}
+    body {
+        background-image: url("/static/preston-pownell-16950.jpg");
+        background-color: #cccccc;
+    }
+{% endblock %}
+
 {% block content %}
 
 <h1>Welcome!</h1>
