--- a/templates/US_map.html
+++ b/templates/US_map.html
@@ -16,13 +16,15 @@
 {% endblock %}
 
 {% block content %} 
-<div id="map"></div>
+<div class="container-fluid">
+    <div id="map"></div>
 
 
- <script src="/static/main_map.js"></script>
- <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+     <script src="/static/main_map.js"></script>
+     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
+</div>
         
 
 {% endblock %}
