--- a/templates/user_map.html
+++ b/templates/user_map.html
@@ -5,10 +5,12 @@
 {% block style %}
       #map {
         height: 100%;
+        width: 100%;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
+        width: 100%;
         margin: 0;
         padding: 0;
       }
@@ -16,15 +18,51 @@
 {% endblock %}
 
 {% block content %} 
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/dashboard">CHALKED</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/dashboard"> {{ session['username'] }}<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="/user-map">map</a></li>
+        <li><p class="navbar-text">signed in as {{ session['username'] }}</li>
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+            <form class="navbar-form navbar-right" action='/logout' method='POST'>
+                <button class='btn btn-link' role='link' type='submit' value='log out'>log out </button>
+            </form>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<br>
 <h1>Places I've climbed</h1>
+<div class="row">
+    <div class="col-xs-12">
+        <div id="map"></div>
 
-<div id="map"></div>
 
+         <script src="/static/user_map.js"></script>
+         <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 
- <script src="/static/user_map.js"></script>
- <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
+    </div>
+</div>
         
 
 {% endblock %}
