--- a/templates/user_map.html
+++ b/templates/user_map.html
@@ -51,17 +51,19 @@
   </div><!-- /.container-fluid -->
 </nav>
 <br>
-<h1>Places I've climbed</h1>
-<div class="row">
-    <div class="col-xs-12">
-        <div id="map"></div>
 
+<div class="container-fluid">
+  <h1>Places I've climbed</h1>
+  <div class="row">
+      <div class="col-xs-12">
+          <div id="map"></div>
+           <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 
-         <script src="/static/user_map.js"></script>
-         <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
 
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
-    </div>
+          <script src="/static/user_map.js"></script>
+      </div>
+  </div>
 </div>
         
 
