--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,15 @@
 <html>
     <head>
         <title>{% block title %} TITLE GOES HERE {% endblock %}</title>
-        <style>{% block style %} STYLIZE {% endblock %}</style>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="static/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Permanent+Marker" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
     </head>
         
 <body>
 
-    {% if 'username' in session %}
-        <div> Currently logged in as {{ session['username'] }}.</div>
-    {% endif %}
 
     {% for message in get_flashed_messages() %}
         <li> {{ message }} </li>
