--- a/templates/user_map.html
+++ b/templates/user_map.html
@@ -2,60 +2,40 @@
 
 {% block title %} My map {% endblock %}
 
-{% block style %}
-      #map {
-        height: 100%;
-        width: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-      }
-
-{% endblock %}
-
 {% block content %}
 
 
 
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/dashboard">CHALKED</a>
-      </div>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+      </button>
+      <a class="navbar-brand" href="/dashboard">CHALKED</a>
+    </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="/dashboard"> {{ session['username'] }}<span class="sr-only">(current)</span></a></li>
-          <li class="active"><a href="/user-map">map</a></li>
-          <li><p class="navbar-text">signed in as {{ session['username'] }}</li>
-        </ul>
-        
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-              <form class="navbar-form navbar-right" action='/logout' method='POST'>
-                  <button class='btn btn-link' role='link' type='submit' value='log out'>log out </button>
-              </form>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-  <br>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/dashboard"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  home<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="/user-map"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> my map</a></li>
+        <li><p class="navbar-text"><i> signed in as {{ session['username'] }}</i></li>
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+            <form class="navbar-form navbar-right" action='/logout' method='POST'>
+                <button class='btn btn-link' role='link' type='submit' value='log out'>log out </button>
+            </form>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
   <div class="container-fluid">
-    <h1>Places I've climbed</h1>
     <div class="row">
         <div class="col-xs-12">
             <div id="map"></div>
@@ -68,5 +48,14 @@
     </div>
   </div>
 
+
+<style>
+
+body {
+  background: url("static/crossword.png");
+}
+
+
+</style>
 
 {% endblock %}
