--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,12 @@
     </head>
         
 <body>
-
-
-    {% for message in get_flashed_messages() %}
-        <li> {{ message }} </li>
-    {% endfor %}
+    <div class='container fluid' id='flash-message'>
+        {% for message in get_flashed_messages() %}
+            <li> {{ message }} </li>
+        {% endfor %}
+        </div>
+    </div>
     
     {% block  content %} CONTENT GOES HERE {% endblock %}
 
