fixed invalid pw flash message display

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,11 @@
     </head>
         
 <body>
-    <div class='container fluid' id='flash-message'>
+<!--     <div class='container fluid' id='flash-message'>
         {% for message in get_flashed_messages() %}
             <li> {{ message }} </li>
         {% endfor %}
-        </div>
-    </div>
+    </div> -->
     
     {% block  content %} CONTENT GOES HERE {% endblock %}
 
