--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,22 +7,64 @@
 {% endblock %}
 
 {% block content %}
+{% if 'username' in session %}
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+      </button>
+      <a class="navbar-brand" href="/">CHALKED</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/dashboard"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  home<span class="sr-only">(current)</span></a></li>
+        <li><a href="/user-map"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> my map</a></li>
+        <li><p class="navbar-text"><i>signed in as {{ session['username'] }}</i></li>
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+            <form class="navbar-form navbar-right" action='/logout' method='POST'>
+                <button class='btn btn-link' role='link' type='submit' value='log out'>log out </button>
+            </form>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+{% endif %}
+
+
+
 
 <div class="container fluid" id="homepage">
   <div class="container">
     <div id="log-in-form" class="row">
 
-      <div class="col-md-4 col-md-offset-4">
+      <div class="col-md-4">
         <div id="title">
           Chalked
         </div>
       </div>
-      <div class="col-md-4 col-md-offset-4">
+    </div>
+    <div id="log-in-form" class="row">
+      <div class="col-md-4 col-md-offset-2">
+        <div id="tagline">
+          track your outdoor bouldering experiences
+        </div>
+      </div>
+    </div>
+    <div id="log-in-form" class="row">
+      <div class="col-md-4">
         <div id="sign-in">
           <form action='/login' method='POST'>
-              <label>USERNAME:
+              <label><b>USERNAME</b>
                   <input type='username' name='username' id='username' required></label><br>
-              <label>PASSWORD:
+              <label><b>PASSWORD</b>
                   <input type='password' name='password' id='password' required></label><br>
               <input type='submit' id='login' value='log in'>
               {% for message in get_flashed_messages() %}
@@ -30,7 +72,7 @@
               {% endfor %}
           </form>
         </div>
-        <a href="/register">register</a>
+        New to Chalked?<a href="/register"> Sign up!</a>
       </div>
     </div>
   </div>
@@ -40,9 +82,8 @@
 
 body {
   
-  background-image: url(static/alexa-2.jpg);
+  background: linear-gradient(rgba(35, 50, 55, 0.2), rgba(35, 50, 55, 0.2)), rgba(35,50,55,0.2) url(static/bowlingpin.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 </style>
