--- a/static/styles.css
+++ b/static/styles.css
@@ -52,13 +52,13 @@ input {
 18121E
 984B43
 EAC67A*/
-h3, h1 {
+h1, h2, h3 {
     font-family: 'permanent marker', cursive;
     color: #18121E;
     margin-left: 12px;
 }
 
-img {
+.centerBlock img {
     padding: 0% 20%;
 }
 
@@ -73,6 +73,7 @@ img {
     /*text-transform: uppercase;*/
     color: #fffff;
     background: #233237;
+    margin-left: 25px;
 }
 
 
@@ -100,11 +101,11 @@ th {
 #title {
 /*  margin-left: auto;
   margin-right: auto;*/
-  margin-top: 20%;
+/*  margin-top: 20%;
   position: auto;
   top: 50%;
-  transform: translateY(100%);
-  font-size: 120px;
+  transform: translateY(100%);*/
+  font-size: 150px;
   display: inline;
   color: white;
   font-family: 'Permanent Marker', cursive;
@@ -117,11 +118,13 @@ th {
 
 
 #log-in-form a {
-    color: #fff
+    color: #EAC67A;
+    font-weight: bold;
 }
 
 #log-in-form a:hover {
-    color: #EAC67A
+    color: #fff;
+    font-weight: bold;
 }
 
 /*#log-in-form input {
@@ -130,11 +133,13 @@ th {
 
 .btn-link:hover {
     text-decoration: none;
+    font-weight: bold;
+    font-size: 12px;
 }
 
 
 #login {
-    width:250px;
+    width:234px;
 }
 
 
@@ -149,6 +154,13 @@ li {
 }
 
 #tagline {
-    font-size: 30px;
-    font-family: 'permanent marker';
+    font-size: 35px;
+    font-family: 'Permanent Marker', cursive;
 }
+
+.col-xs-12 {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+
