--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="static/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Permanent+Marker" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:300i,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     </head>
         
