--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -47,14 +47,16 @@
 
       <div class="col-md-4">
         <div id="title">
+
           Chalked
+
         </div>
       </div>
     </div>
     <div id="log-in-form" class="row">
-      <div class="col-md-4 col-md-offset-2">
+      <div class="col-md-5 col-md-offset-3">
         <div id="tagline">
-          track your outdoor bouldering experiences
+          conquer your problems
         </div>
       </div>
     </div>
