--- a/templates/register.html
+++ b/templates/register.html
@@ -35,5 +35,11 @@
         <a href="/">go back</a>
     </div>
 </div>
+<script>
+body {
+  background-image: url("static/crossword.png");
+}
+</script>
+
 
 {% endblock %}
