--- a/templates/user_map.html
+++ b/templates/user_map.html
@@ -39,11 +39,13 @@
     <div class="row">
         <div class="col-xs-12">
             <div id="map"></div>
+            <script src="http://code.jquery.com/jquery.js"></script>
              <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 
             <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9qDiQS_jF-wRKvyNXlov2leRbMEq56Ig"></script>
 
             <script src="/static/user_map.js"></script>
+
         </div>
     </div>
   </div>
