--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,13 +40,16 @@
         <div class="col-sm-3">
             <div class="affix">
                 <br>
-                <div class="centerBlock">
+                <div id="profile">
                     <h1 class=center-block>Hello, {{ session['username'] }}!</h1>
-                    <img src='/static/45.png'>
-                    <h3 id='points'></h3>
-                </div>
 
-                <button type='button' class='btn btn-info btn-lg' id='log-climb-btn' data-toggle='modal' data-target='#myModal'>Log A New Climb</button>
+                </div>
+                <div class="col-sm-12">
+                    <h2 id='animal'></h3>
+                    <h4 id='points'></h4>
+                    <h5 id='next-badge'></h5>
+
+                    <button type='button' class='btn btn-info btn-lg' id='log-climb-btn' data-toggle='modal' data-target='#myModal'>Log A New Climb</button>
 
 
                 <div class='modal fade' id='myModal' role='document'>
@@ -101,7 +104,7 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                 </div>
-                        
+                        </div>
                         </div>
                     </div> 
                 </div> 
