--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -84,8 +84,9 @@
 
 body {
   
-  background: linear-gradient(rgba(35, 50, 55, 0.2), rgba(35, 50, 55, 0.2)), rgba(35,50,55,0.2) url(static/bowlingpin.jpg);
+  background: linear-gradient(rgba(35, 50, 55, 0.2), rgba(35, 50, 55, 0.2)), rgba(35,50,55,0.2) url(static/bowlingpin.jpg) no-repeat;
   background-size: cover;
+  background: color: white;
 }
 
 </style>
