--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,17 +39,17 @@
     <div class="row">
         <div class="col-sm-3">
             <div class="affix">
-                <br>
-                <div id="profile">
+                
+                <div class="col-sm-8">
                     <h1 class=center-block>Hello, {{ session['username'] }}!</h1>
-
-                </div>
-                <div class="col-sm-12">
+                    <div id="profile"></div>
                     <h2 id='animal'></h3>
                     <h4 id='points'></h4>
                     <h5 id='next-badge'></h5>
+                
 
-                    <button type='button' class='btn btn-info btn-lg' id='log-climb-btn' data-toggle='modal' data-target='#myModal'>Log A New Climb</button>
+
+                <button type='button' class='btn btn-info btn-lg' id='log-climb-btn' data-toggle='modal' data-target='#myModal'>Log A New Climb</button>
 
 
                 <div class='modal fade' id='myModal' role='document'>
@@ -104,12 +104,13 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                 </div>
-                        </div>
+                            </div> 
                         </div>
                     </div> 
                 </div> 
             </div>
         </div>
+    
 
 
     
