--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,7 +21,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/dashboard"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  home<span class="sr-only">(current)</span></a></li>
+        <li><a href="/dashboard"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  home<span class="sr-only">(current)</span></a></li>
         <li><a href="/user-map"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> my map</a></li>
         <li><p class="navbar-text"><i>signed in as {{ session['username'] }}</i></li>
       </ul>
